# central-bank-spillovers

./: CLAUDE.md  README.md  main.py  pyproject.toml  sam_fraley_log.md
.claude/: settings.local.json
data/: data_metadata.txt
data/controls/: ez_hicp_vintages.csv  ez_unemployment_vintages.csv  global_indices_daily.csv  inflation_eur.csv  inflation_uk.csv  inflation_us.csv  notes_on_controls.md  uk_cpi_vintages.csv  uk_unemployment_vintages.csv  unemployment_eur.csv  unemployment_uk.csv  unemployment_us.csv  us_cpi_vintages.csv  us_unemployment_vintages.csv  vix_daily.csv
data/corpus/: ecb_answers.csv  ecb_complete.csv  ecb_remarks.csv  fed_answers.csv  fed_complete.csv  fed_remarks.csv
data/transcripts/ECB/: ecb.is170720.en.txt  ecb.is170907.en.txt  ecb.is171026.en.txt  (+238 more)
docs/: docs_metadata.txt
literature/: imf-25.md  literature_metadata.txt  mcdonald-2011.md  pdf_to_md.py  pope-25.md  synthesis.md
narr/: Thesis Research Topics.md  narr_metadata.txt  to-do.md
notebooks/: corpus_test.ipynb  notebooks_metadata.txt
output/: output_metadata.txt
src/: boe_pdf_to_txt.py  build_boe_corpus.py  build_ecd_corpus.py  build_fed_corpus.py  clean_boe.py  clean_ecb.py  clean_fed.py  clean_transcripts.py  ecb_normalize.py  fed_pdf_to_txt.py  health_check_transcripts.py  plot_transcript_coverage.py  pull_fred.py  scrape_finance.py  scrape_vix.py  src_metadata.txt  standardize_cleaned.py  standardize_normalized.py
src/text-pipeline/: data-collection.py  process_transcripts.py
src/transcript_cleaning/: __init__.py  boe.py  common.py  ecb.py  fed.py  vulgar_fractions.py
(+521 files in other folders)
